--- a/PROFILEDIR/chrome/css/NavbarButtons.css
+++ b/PROFILEDIR/chrome/css/NavbarButtons.css
@@ -2,7 +2,8 @@
 
 /* https://github.com/axydavid/FirefoxUI */
 
-@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
+/* Do not remove the @namespace line -- it's required for correct functioning */
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 /* Nav Buttons */
 /*[[NB]]*/
