--- a/PROFILEDIR/chrome/css/No_close_cross_inTabs.css
+++ b/PROFILEDIR/chrome/css/No_close_cross_inTabs.css
@@ -1,4 +1,7 @@
-﻿/* NEVER */
+﻿/* Do not remove the @namespace line -- it's required for correct functioning */
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+/* NEVER */
 .tab-close-button{ display: none !important; }
 
 /* ON HOVER */
