--- a/PROFILEDIR/chrome/css/SearchBar.css
+++ b/PROFILEDIR/chrome/css/SearchBar.css
@@ -1,5 +1,7 @@
 ﻿/* ########################### Searchbar ###################### */
 /* https://gist.github.com/RavinduL/e5695cc9e26c2ee9eac2cc8e78778b88 */
+
+/* Do not remove the @namespace line -- it's required for correct functioning */
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 @keyframes scale-in {
