--- a/PROFILEDIR/chrome/css/TabTopBottomLineMerge.css
+++ b/PROFILEDIR/chrome/css/TabTopBottomLineMerge.css
@@ -2,6 +2,9 @@
 /* The line animates nicely to fit in with the rest of the Photon UI */
 /* The loading indicator and burst are both colored to match */
 
+/* Do not remove the @namespace line -- it's required for correct functioning */
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
 /* Remove TopLine on normal Tabs */
 .tabbrowser-tab:not([usercontextid]) .tab-line[selected="true"] {
   display: none !important;
