--- a/PROFILEDIR/chrome/css/UrlBarRoundEdges.css
+++ b/PROFILEDIR/chrome/css/UrlBarRoundEdges.css
@@ -1,5 +1,8 @@
 ﻿/* Make Urlbar round edges */
 
+/* Do not remove the @namespace line -- it's required for correct functioning */
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
 #urlbar,
 #identity-box.verifiedIdentity::after,
 #identity-box.verifiedDomain::after,
