--- a/PROFILEDIR/chrome/css/RemoveMinMaxClose.css
+++ b/PROFILEDIR/chrome/css/RemoveMinMaxClose.css
@@ -1,7 +1,5 @@
 ﻿/* ########################### Remove Min Max Close Button ###################### */
-
-/* Do not remove the @namespace line -- it's required for correct functioning */
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 #titlebar-min {display: none !important;}
 #titlebar-max {display: none !important;}
