--- a/PROFILEDIR/chrome/css/NavbarButtons.css
+++ b/PROFILEDIR/chrome/css/NavbarButtons.css
@@ -2,8 +2,7 @@
 
 /* https://github.com/axydavid/FirefoxUI */
 
-/* Do not remove the @namespace line -- it's required for correct functioning */
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 /* Nav Buttons */
 /*[[NB]]*/
