--- a/PROFILEDIR/chrome/css/No_close_cross_inTabs.css
+++ b/PROFILEDIR/chrome/css/No_close_cross_inTabs.css
@@ -1,7 +1,4 @@
-﻿/* Do not remove the @namespace line -- it's required for correct functioning */
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-
-/* NEVER */
+﻿/* NEVER */
 .tab-close-button{ display: none !important; }
 
 /* ON HOVER */
