--- a/PROFILEDIR/chrome/css/RemoveSpaceBeforeFirstTab.css
+++ b/PROFILEDIR/chrome/css/RemoveSpaceBeforeFirstTab.css
@@ -1,7 +1,4 @@
-﻿/* Do not remove the @namespace line -- it's required for correct functioning */
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-
-/* Remove free space before first Tab */
+﻿/* Remove free space before first Tab */
 .titlebar-placeholder:first-child {
 	display: none !important;
 }
