--- a/PROFILEDIR/chrome/userChrome.css
+++ b/PROFILEDIR/chrome/userChrome.css
@@ -1,9 +1,10 @@
 @import url("./css/ChangeFont-userChrome.css");
 @import url("./css/FavoritesMenu.css");
 @import url("./css/NavbarButtons.css");
+/* @import url("./css/NavbarButtons_NIGHTLYFIX.css"); */
 @import url("./css/UrlBarRoundEdges.css");
 @import url("./css/No_close_cross_inTabs.css");
-/* @import url("./css/RemoveMinMaxClose.css"); */
+@import url("./css/RemoveMinMaxClose.css");
 @import url("./css/TabTopBottomLineMerge.css");
 @import url("./css/TabReduceFaviconSpace.css");
 @import url("./css/RemoveSpaceBeforeFirstTab.css");
