--- a/PROFILEDIR/chrome/css/about_home_newtab_bg.css
+++ b/PROFILEDIR/chrome/css/about_home_newtab_bg.css
@@ -8,9 +8,10 @@
      background-attachment: fixed !important;
      opacity: 0.8;
   }
-  /* @media (min-width: 1280px) {
+  @media (min-width: 1280px) {
     .activity-stream main {
-       width: 750px !important;
-       margin-left: 800px !important;}
-  } */
+       height: 750px !important;
+       /* margin-left: 800px !important; */
+    }
+  }
 }
