add github url under about windows

--- a/PROFILEDIR/chrome/userChrome.css
+++ b/PROFILEDIR/chrome/userChrome.css
@@ -1,5 +1,6 @@
 @import url("./css/ChangeFont-userChrome.css");
 @import url("./css/FavoritesMenu.css");
+@import url("./css/About.css");
 @import url("./css/NavbarButtons.css");
 /* @import url("./css/NavbarButtons_NIGHTLYFIX.css"); */
 @import url("./css/UrlBarRoundEdges.css");
