add UrlBarSSLColors.css [disabled]

--- a/PROFILEDIR/chrome/userChrome.css
+++ b/PROFILEDIR/chrome/userChrome.css
@@ -4,6 +4,7 @@
 @import url("./css/NavbarButtons.css");
 /* @import url("./css/NavbarButtons_NIGHTLYFIX.css"); */
 @import url("./css/UrlBarRoundEdges.css");
+/* @import url("./css/UrlBarSSLColors.css"); */
 @import url("./css/No_close_cross_inTabs.css");
 @import url("./css/RemoveMinMaxClose.css");
 @import url("./css/TabTopBottomLineMerge.css");
