update about_home_newtab_bg.css with searchbar color

--- a/PROFILEDIR/chrome/css/about_home_newtab_bg.css
+++ b/PROFILEDIR/chrome/css/about_home_newtab_bg.css
@@ -15,4 +15,9 @@
     }
   }
 
+  .search-wrapper:active input, .search-wrapper input:focus {
+    border-color: white !important;
+    box-shadow: 0 0 0 1px grey !important;
+  }
+
 }
