--- a/PROFILEDIR/chrome/userChrome.css
+++ b/PROFILEDIR/chrome/userChrome.css
@@ -2,12 +2,13 @@
 @import url("./css/FavoritesMenu.css");
 @import url("./css/FavoritesMenuLineHeight.css");
 @import url("./css/About.css");
+@import url("./css/Titlebar_Background_Color.css");
 @import url("./css/NavbarButtons.css");
 /* @import url("./css/NavbarButtons_NIGHTLYFIX.css"); */
 @import url("./css/UrlBarRoundEdges.css");
-/* @import url("./css/UrlBarSSLColors.css"); */
+@import url("./css/UrlBarSSLColors.css");
 @import url("./css/No_close_cross_inTabs.css");
-@import url("./css/RemoveMinMaxClose.css");
+/* @import url("./css/RemoveMinMaxClose.css"); */
 @import url("./css/TabTopBottomLineMerge.css");
 @import url("./css/TabReduceFaviconSpace.css");
 @import url("./css/RemoveSpaceBeforeFirstTab.css");
