--- a/PROFILEDIR/chrome/css/FavoritesMenu.css
+++ b/PROFILEDIR/chrome/css/FavoritesMenu.css
@@ -1,4 +1,4 @@
-﻿/* ########################### Favoriten Menü ###################### */
+/* ########################### Favoriten Menü ###################### */
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 /* in Tabs öffnen im Lesezeichenmenü ausblenden */
