--- a/PROFILEDIR/chrome/css/FavoritesMenuLineHeight.css
+++ b/PROFILEDIR/chrome/css/FavoritesMenuLineHeight.css
@@ -1,4 +1,4 @@
-﻿@-moz-document url-prefix(chrome://browser/content/browser.xul){
+@-moz-document url-prefix(chrome://browser/content/browser.xul){
 
   /* Zeilenhöhe im Lesezeichen Menü */
   #BMB_bookmarksShowAll,
