--- a/PROFILEDIR/chrome/css/NavbarButtons.css
+++ b/PROFILEDIR/chrome/css/NavbarButtons.css
@@ -1,4 +1,4 @@
-﻿/* ####################### Back/Forward Button and Refresh in Australis Design #################################### */
+/* ####################### Back/Forward Button and Refresh in Australis Design #################################### */
 
 /* https://github.com/axydavid/FirefoxUI */
 
