--- a/PROFILEDIR/chrome/css/SearchBar.css
+++ b/PROFILEDIR/chrome/css/SearchBar.css
@@ -1,4 +1,4 @@
-﻿/* ########################### Searchbar ###################### */
+/* ########################### Searchbar ###################### */
 /* https://gist.github.com/RavinduL/e5695cc9e26c2ee9eac2cc8e78778b88 */
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
