--- a/PROFILEDIR/chrome/css/TabTopBottomLineMerge.css
+++ b/PROFILEDIR/chrome/css/TabTopBottomLineMerge.css
@@ -1,4 +1,4 @@
-﻿/* Moved container indicator ("underline") to the top, merged with the regular old tab line element */
+/* Moved container indicator ("underline") to the top, merged with the regular old tab line element */
 /* The line animates nicely to fit in with the rest of the Photon UI */
 /* The loading indicator and burst are both colored to match */
 
