--- a/PROFILEDIR/chrome/userContent.css
+++ b/PROFILEDIR/chrome/userContent.css
@@ -1,4 +1,4 @@
-﻿@import url("./css/ChangeFont-userContent.css");
+@import url("./css/ChangeFont-userContent.css");
 @import url("./css/about_home_newtab_bg.css");
 @import url("./css/recentupdates_category_always_visible.css");
 @import url("./css/addonlists_compact_more_compact.css");
