--- a/PROFILEDIR/chrome/css/ChangeFont-userContent.css
+++ b/PROFILEDIR/chrome/css/ChangeFont-userContent.css
@@ -1,4 +1,4 @@
-﻿/* ############# Set Firefox UI Font ############# */
+/* ############# Set Firefox UI Font ############# */
 
 /* https://fonts.google.com/specimen/Arimo */
 /* @font-face { font-family: "Arimo"; src: url('../font/Arimo/Arimo-Regular.ttf') format('truetype'); font-style: normal; font-weight: 400; }
