--- a/PROFILEDIR/chrome/css/GreyTextInactiveTab.css
+++ b/PROFILEDIR/chrome/css/GreyTextInactiveTab.css
@@ -1,4 +1,4 @@
-﻿/* text gray on inactive Tab */
+/* text gray on inactive Tab */
 
 #tabbrowser-tabs > .tabbrowser-tab:not([visuallyselected="true"]) .tab-label {
   filter: brightness(0.5) opacity(0.5);
