--- a/PROFILEDIR/chrome/userChrome.css
+++ b/PROFILEDIR/chrome/userChrome.css
@@ -14,3 +14,4 @@
 @import url("./css/GreyFaviconInactiveTab.css");
 @import url("./css/GreyTextInactiveTab.css");
 @import url("./css/SearchBar.css");
+@import url("./css/OverflowMenuWidth.css");
