codechange for FF65

--- a/PROFILEDIR/chrome/css/RemoveMinMaxClose.css
+++ b/PROFILEDIR/chrome/css/RemoveMinMaxClose.css
@@ -5,5 +5,10 @@
 #titlebar-max {display: none !important;}
 #titlebar-close {display: none !important;}
 
+/* Code for >=FF65 */
+.titlebar-min {display: none !important;}
+.titlebar-max {display: none !important;}
+.titlebar-close {display: none !important;}
+
 /* For Fullscreen Mode */
 #window-controls { display:none!important; }
