change NavbarButtons.css to work with all versions up to 67

--- a/PROFILEDIR/chrome/css/NavbarButtons.css
+++ b/PROFILEDIR/chrome/css/NavbarButtons.css
@@ -75,7 +75,7 @@
   background: #F6F6F6;
   z-index: 9 !important;
   position: absolute !important;
-  height: 28px !important;
+  height: 26px !important;
 }
 
 #forward-button:hover .toolbarbutton-icon
@@ -97,6 +97,7 @@
 {
   padding-left: 17px !important;
   background: hsla(0,0%,70%,.3);
+  max-height: 25px !important;
 }
 
 .autocomplete-textbox
@@ -111,8 +112,9 @@
 
 #urlbar
 {
-  height: 28px !important;
-  min-height: 19px !important;
+  padding-bottom: 2px !important;
+  height: 26px !important;
+  min-height: 26px !important;
 }
 
 #page-action-buttons
@@ -131,9 +133,9 @@
 #stop-reload-button .toolbarbutton-icon, #stop-button .toolbarbutton-icon, #reload-button .toolbarbutton-icon
 {
   fill: rgb(102,102,102);
-  height: 28px !important;
+  height: 25px !important;
   width: 28px !important;
-  padding: 4px !important;
+  padding: 5px !important;
   position: absolute !important;
 }
 
